  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------


2006-05-10   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Change RELEASE_STRING of svn versions from
	x.y.z-r111 to x.y.z.r111 because tools like rpmbuild do not accept
	a '-' inside the version numbers.

2006/05/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- removed prototype for a function which had been removed in previous
  versions


2006-04-24   Christian Stimming <stimming@tuhh.de>

	* test/README.MSVC: Update description on how to create a
	libgwenhywfar.lib file for MSVC.



2006/04/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- text.{c,h}: 
  - added function GWEN_Text_UnescapeN()
  - added function GWEN_Text_EscapeTolerant()
  - added function GWEN_Text_UnescapeTolerant()
  - added function GWEN_Text_UnescapeTolerantN()


2006-04-18   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfarapi.h: Define __attribute__((deprecated)) not on
	all __GNUC__, but only on gcc >= 3.0.x because gcc-2.95 doesn't
	yet have it.

	* src/base/logger.h: Replace __attribute__((deprecated)) by the
	macro from gwenhywfarapi.h.

===========================================================================
MARK: released gwenhywfar-2.2.0 (2006/04/12)
===========================================================================


2006/04/12: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed rfc822 DBIO plugin (import *and* export now work)


2006/04/10: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------